# vulca-nemo-curator-adapter

./: README.md  package_manifest.json  pyproject.toml
.github/workflows/: public-candidate-ci.yml
configs/: nemo_parquet_public_files.txt  nvidia_release_readiness_policy.json
docs/: nemo-image-writer-parquet-compatibility.md  nvidia-maintainer-handoff.md
samples/: nemo_image_writer_documented_enriched.parquet  nemo_image_writer_documented_enriched.source.json  nemo_image_writer_source_first.parquet  nemo_image_writer_source_first.source.json  nvidia_release_readiness_metadata.jsonl
scripts/: build_nemo_image_writer_parquet_fixtures.py  build_nvidia_maintainer_handoff.py  verify_public_candidate.py
src/vulca_curator_adapter/: __init__.py  __main__.py  cli.py  evidence.py  safety_markers.py  schemas.py
src/vulca_curator_adapter/ingest/: __init__.py  cosmos.py  generic_jsonl.py  nemo.py  nemo_image_writer.py  nemo_parquet.py  source_gate.py  visual_evidence.py
src/vulca_curator_adapter/packets/: __init__.py  review_packet.py
src/vulca_curator_adapter/triage/: __init__.py  decision.py  policies.py
src/vulca_curator_adapter/writers/: __init__.py  html.py  jsonl.py  review_report.py  summary.py  visual_report.py
tests/: test_nemo_image_writer.py  test_nemo_parquet.py  test_nemo_parquet_fixtures.py
