[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vulca-curator-adapter"
version = "0.1.0"
description = "Post-curation review gates for enterprise visual curation metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
nemo-parquet = ["pyarrow>=17"]
handoff-docs = [
  "pypdf>=5,<7",
  "reportlab>=4,<5",
  "svglib>=1.5,<1.6",
]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.25",
  "pyarrow>=17",
  "pypdf>=5,<7",
  "pytest>=8,<9",
  "reportlab>=4,<5",
  "svglib>=1.5,<1.6",
]

[project.scripts]
vulca-curator = "vulca_curator_adapter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/configs/nemo_parquet_public_files.txt",
  "/configs/nvidia_release_readiness_policy.json",
  "/docs/assets/nvidia-maintainer-handoff/contract-mapping.svg",
  "/docs/assets/nvidia-maintainer-handoff/integration-boundary.svg",
  "/docs/assets/nvidia-maintainer-handoff/reproduction-evidence.svg",
  "/docs/nemo-image-writer-parquet-compatibility.md",
  "/docs/nvidia-maintainer-handoff.md",
  "/docs/nvidia-maintainer-handoff.pdf",
  "/pyproject.toml",
  "/samples/nemo_image_writer_documented_enriched.parquet",
  "/samples/nemo_image_writer_documented_enriched.source.json",
  "/samples/nemo_image_writer_source_first.parquet",
  "/samples/nemo_image_writer_source_first.source.json",
  "/samples/nvidia_release_readiness_metadata.jsonl",
  "/scripts/build_nemo_image_writer_parquet_fixtures.py",
  "/scripts/build_nvidia_maintainer_handoff.py",
  "/src/vulca_curator_adapter/__init__.py",
  "/src/vulca_curator_adapter/__main__.py",
  "/src/vulca_curator_adapter/cli.py",
  "/src/vulca_curator_adapter/evidence.py",
  "/src/vulca_curator_adapter/ingest/__init__.py",
  "/src/vulca_curator_adapter/ingest/cosmos.py",
  "/src/vulca_curator_adapter/ingest/generic_jsonl.py",
  "/src/vulca_curator_adapter/ingest/nemo.py",
  "/src/vulca_curator_adapter/ingest/nemo_image_writer.py",
  "/src/vulca_curator_adapter/ingest/nemo_parquet.py",
  "/src/vulca_curator_adapter/ingest/source_gate.py",
  "/src/vulca_curator_adapter/ingest/visual_evidence.py",
  "/src/vulca_curator_adapter/packets/__init__.py",
  "/src/vulca_curator_adapter/packets/review_packet.py",
  "/src/vulca_curator_adapter/safety_markers.py",
  "/src/vulca_curator_adapter/schemas.py",
  "/src/vulca_curator_adapter/triage/__init__.py",
  "/src/vulca_curator_adapter/triage/decision.py",
  "/src/vulca_curator_adapter/triage/policies.py",
  "/src/vulca_curator_adapter/writers/__init__.py",
  "/src/vulca_curator_adapter/writers/html.py",
  "/src/vulca_curator_adapter/writers/jsonl.py",
  "/src/vulca_curator_adapter/writers/review_report.py",
  "/src/vulca_curator_adapter/writers/summary.py",
  "/src/vulca_curator_adapter/writers/visual_report.py",
  "/tests/test_nemo_image_writer.py",
  "/tests/test_nemo_parquet.py",
  "/tests/test_nemo_parquet_fixtures.py",
]
